_/css/style.css
/* ... */
@font-face {
	font-family: 'ProximaNovaRegular';
	src: url('../fonts/regular/ProximaNova-Reg-webfont.eot');
	src: local('☺'), url('../fonts/regular/ProximaNova-Reg-webfont.woff') format('woff'), url('../fonts/regular/ProximaNova-Reg-webfont.ttf') format('truetype'), url('../fonts/regular/ProximaNova-Reg-webfont.svg#webfontKqnc2168') format('svg');
	font-weight: normal;
	font-style: normal;
}

@font-face {
	font-family: 'ProximaNovaSemibold';
	src: url('../fonts/semibold/ProximaNova-Sbold-webfont.eot');
	src: local('☺'), url('../fonts/semibold/ProximaNova-Sbold-webfont.woff') format('woff'), url('../fonts/semibold/ProximaNova-Sbold-webfont.ttf') format('truetype'), url('../fonts/semibold/ProximaNova-Sbold-webfont.svg#webfontILGjOKPE') format('svg');
	font-weight: normal;
	font-style: normal;
}

@font-face {
	font-family: 'ProximaNovaLight';
	src: url('../fonts/light/ProximaNova-Light-webfont.eot');
	src: local('☺'), url('../fonts/light/ProximaNova-Light-webfont.woff') format('woff'), url('../fonts/light/ProximaNova-Light-webfont.ttf') format('truetype'), url('../fonts/light/ProximaNova-Light-webfont.svg#webfontILGjOKPE') format('svg');
	font-weight: normal;
	font-style: normal;
}



/* Ok, this is where the fun starts.
-------------------------------------------------------------------------------*/

/* new Linux- and Windows-friendly sans-serif font stack: http://mky.be/fontstack */
body {font: 13px Helmet, Freesans, sans-serif;}

/* using local fonts? make sure to read up on Paul Irish's 
	Bulletproof @font-face syntax: http://mky.be/font-face/bulletproof/ */

/* we like off-black for text */
body, select, input, textarea {color: #333;}

/*a {color: #03f;}*/
/*a:hover {color: #69f;}*/

/* Custom text-selection colors (remove any text shadows: twitter.com/miketaylr/status/12228805301) */
::-moz-selection{background: #939598; color: #fff; text-shadow: none;}
::selection {background: #939598; color: #fff; text-shadow: none;} 

/*	j.mp/webkit-tap-highlight-color */
a:link {-webkit-tap-highlight-color: #fcd700;} 

ins {background-color: #fcd700; color: #000; text-decoration: none;}
mark {background-color: #fcd700; color: #000; font-style: italic; font-weight: bold;}



/* Global tools
-------------------------------------------------------------------------------*/




/* Global modules
-------------------------------------------------------------------------------*/

body {
	color: #484848;
}

.wrapper {
}

.min-max {
	min-width: 960px;	/* sets a min width */
	max-width: 1480px;	/* sets a max width */
	width: 960px;		/* sets a default width */
}

.center {
	margin: 0 auto;
}

.single {
	width: 33.33%;
}

.double  {
	width: 66.66%;
}

.full {
	width: 100%;
}

.clear {
	clear: both;
}

/* segment headlines
-------------------------------------------------------------------------------*/

.segment-headline-wrapper {
	border-top: 1px dashed #cecece;
	border-bottom: 1px dashed #cecece;
	clear: both;
}

.segment-headline-wrapper h2 {
	padding: 18px 0;
	font-size: 24px;
	font-weight: 800;
	font-style: italic;
	font-family: Georgia, "Times New Roman", Times, serif;
}

/* extentions */

.segment-leader-title {
	color: #656565;
	font-size: 18px;
	font-weight: normal;
	padding-left: 5px;
}

.segment-header-spacer {
	margin-left: 30px;
}

/* !Header
-------------------------------------------------------------------------------*/

header {
	position: fixed;
	overflow: hidden;
	background: white;
	background: rgba(255, 255, 255, .97);
	z-index: 50000;
	width: 100%;
	top: -98px;
	border-bottom: 1px dashed #cecece;

}

.teamdetroit a {
	margin-top: 40px;
	margin-bottom: 9px;
	float: left;
	display: block;
	height: 44px;
	width: 148px;
	text-indent: -9999px;
	background: url('../img/teamdetroit.png') no-repeat top left;
}

.main-nav ul {
	float: right;
	margin-right: 18px;
}

.main-nav li {
	padding-top: 71px;
	float: left;
}

.main-nav li a {
	margin-left: 50px;
	color: #939598;
	text-decoration: none;
	font-size: 14px;
	font-family: 'ProximaNovaSemibold', Arial, sans-serif;
}

.main-nav li a:hover {
	color: black;
}

/* Billboards
-------------------------------------------------------------------------------*/

#billboard-spacer {
	margin-top: 99px;
}

.billboard-wrapper {
	overflow: hidden;
	position: relative;
}

/* extentions */

/* leadership */

.billboard-ext-leaders {
	height: 420px;
}

.billboard-ext-leaders ul {
	position: absolute;
	width: 2880px;
	margin: 0 auto;
	left: 50%;
	margin-left: -1440px;
	background: black;
}

.billboard-ext-leaders li {
	float: left;
}

.billboard-ext-leaders li:first-child {
	opacity: .2;
}

.billboard-ext-leaders li:last-child {
	opacity: .2;
}

.billboard-ext-leaders li img {
	display: block;
}


/* Content (Projects, Leaders, Culture pages)
-------------------------------------------------------------------------------*/

.content-info-wrapper {
	float: left;
	margin-top: 36px;
	width: 60%;
}

.content-info {
	padding: 0 30px;
	line-height: 26px;
	font-size: 16px;
	font-family:"ProximaNovaRegular", "san-serif";
}

.content-info p {
	margin-bottom: 30px;
}

.content-info a {
	text-decoration: none;
	color: #ED1B2E;
}

.content-info .content-italic {
	font-style: italic;
}

.content-info .content-list {
	font-size: 14px;
	text-align: center;
	margin-bottom: 50px;
}

.content-info .content-list li:first-child {
	margin-bottom: 10px;
	font-size: 18px;
}

.content-info-social {
	margin: 60px 0 60px 0;
}

.content-info-social li {
	height: 60px;
	display: table-cell;
	font-weight: bold;
	font-style: italic;
	font-family: Georgia, "Times New Roman", Times, serif;
}

.content-info-social li:first-child {
	vertical-align : middle; 
	padding-right: 25px;
}

.content-info-social .linkedin a {
	display: inline-block;
	text-indent: -9999px;
	background: url('../img/social/linkedin.png') no-repeat top left;
	width: 60px; height: 60px;
}

.content-quote-wrapper {
	float: right;
	margin-top: 36px;
	width: 40%;
}
/* ... */

